@@ -1,3 +1,8 @@
+2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure_dev.sh:
+	added autolocal
+
 2002-02-21  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-config.in:
@@ -19,9 +24,9 @@
 
 2002-02-01  Dan Espen  <dane@mk.telcordia.com>
 
-	* fvwm-menu-xlock.1: 
-	* fvwm-menu-headlines.1: 
-	* fvwm-menu-directory.1: 
+	* fvwm-menu-xlock.1:
+	* fvwm-menu-headlines.1:
+	* fvwm-menu-directory.1:
 	* fvwm-menu-desktop.1: fvwmrc -> .fvwm2rc
 
 2002-01-30  Mikhael Goikhman  <migo@homemail.com>
@@ -57,7 +62,7 @@
 
 2002-01-16  olicha  <olivier.chapuis@free.fr>
 
-	* xpmroot.c (main): 
+	* xpmroot.c (main):
 	New option -np which causes to set _XSETROOT_ID to None and to do not
 	keep the pixmap in memory. New option -d which free the _XSETROOT_ID
 	pixmap and set it to None and which forces xpmroot to do not set the
