@@ -1,3 +1,8 @@
+2002-02-28  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure.in:
+	re-added with-xinerama-emulation option that was removed recently
+
 2002-02-28  Mikhael Goikhman  <migo@homemail.com>
 
 	* INSTALL.fvwm:
